--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="shortcut icon" href="https://i.pinimg.com/originals/0e/17/ad/0e17ad5cffc72e17e935c307441373bd.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrf8c7pRsOiWvhtIRmSX9xp0hp10nFnxh1Gw&usqp=CAU" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Snake Game</title>
 </head>
